# simple-chat

./: .gitignore  README.md  chainlit.md  pyproject.toml
src/simple_chat/: app.py
